2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/set_presence/main.c: Wait until the connection is 
	ready, so that setting of the presence can succeed. 

2008-12-15  Murray Cumming  <murrayc@murrayc.com>

	* configure.ac:
	* docs/examples/Makefile.am
	* docs/examples/set_presence/: Added a (nonworking) example of 
	setting presence, by copying the connect example and adding a call.

2008-12-01  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Use *_call_* functions instead 
	of *_run_* functions because everybody says they should never be used.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Get other contact features, 
	to show aliases and presence.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Examine the actual contacts 
	handles as before rather than the handle for the list of contacts.
	This now works.

2008-11-14  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Use the new TpContacts API 
	instead, which seems much simpler than all that channel stuff.
	However, this currently gives this GError:
	handle 2 is not currently a valid contact handle (type 1)

2008-11-13  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Still trying to read the subscribed 
	contacts details. Without code changes, I now get a non-null list of 
	contacts, either because I am using a newer telepathy-glib or because 
	I upgrade to Ubuntu Intrepid. However, the attribures GHashTable is empty 
	for all contacts. 

2008-09-31  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Trying to read the subscribed 
	contacts details.

2008-09-31  Murray Cumming  <murrayc@murrayc.com>

	* docs/examples/list_contacts/main.c: Get the ContactsList interface, 
	though I do not yet know how to get details for each contact via 
	the handle.
