@@ -85,6 +85,29 @@ void on_connection_set_presence(TpConnection *proxy,
 }
 
 
+void on_connection_ready (TpConnection *connection,
+  const GError *error,
+  gpointer user_data)
+{
+  if (error)
+  {
+    g_printf ("tp_connection_call_when_ready() failed: %s\n", error->message);
+     return;
+  }
+
+  /* Actually set the presence: */
+  /* See https://bugs.freedesktop.org/show_bug.cgi?id=19097 about the 
+   * difficulty of discovering valid status strings.
+   */
+  tp_cli_connection_interface_simple_presence_call_set_presence (
+    connection, 
+    -1, /* timeout */
+    "away",
+    "Gone fishing",
+    &on_connection_set_presence,
+    NULL, NULL, NULL);
+}
+
 void on_connection_status_changed(TpConnection *proxy,
   guint arg_Status,
   guint arg_Reason,
@@ -100,35 +123,9 @@ void on_connection_status_changed(TpConnection *proxy,
 
         /* tp_cli_connection_interface_simple_presence_call_set_presence() requires the connection to be 
          * ready: */
-        GError *error = NULL;
-        gboolean ready = tp_connection_run_until_ready (connection, 
-         TRUE /* connect */, 
-         &error,
-         NULL /* loop */);
-  
-        if (error)
-        {
-          g_printf ("tp_connection_run_until_ready() failed: %s\n", error->message);
-          g_clear_error (&error);
-          return;
-        }
-
-        if (!ready)
-        {
-          g_printf ("Aborting because the connection could not be made ready.\n");
-        }
-
-        /* Actually set the presence: */
-        /* See https://bugs.freedesktop.org/show_bug.cgi?id=19097 about the 
-         * difficulty of discovering valid status strings.
-         */
-        tp_cli_connection_interface_simple_presence_call_set_presence (
-          connection, 
-          -1, /* timeout */
-          "away",
-          "Gone fishing",
-          &on_connection_set_presence,
-          NULL, NULL, NULL);
+        tp_connection_call_when_ready (connection, 
+          &on_connection_ready,
+          NULL);
 
         break;
 
